Импортировал все блоки в style.scss. Добавил стили theme.

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,5 +1,6 @@
 //Colors
-$theme__base-color: #68b738;
+$green: #68b738;
+$gray: #f2f2f2;
 
 //Fonts
 $regular: "Oswald Regular", "Arial", sans-serif;
