--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,3 +3,27 @@
 @import "global/fonts";
 @import "global/mixins";
 @import "global/base";
+@import "blocks/_common/theme";
+@import "blocks/_common/page-header";
+@import "blocks/_common/page-footer";
+@import "blocks/_common/page-logo";
+@import "blocks/_common/page-nav";
+@import "blocks/_common/contacts";
+@import "blocks/_common/socials";
+@import "blocks/_common/rights-owner";
+@import "blocks/index/intro";
+@import "blocks/index/programs";
+@import "blocks/index/program";
+@import "blocks/index/features";
+@import "blocks/index/feature";
+@import "blocks/index/example";
+@import "blocks/index/achievement";
+@import "blocks/index/slider";
+@import "blocks/catalog/catalog";
+@import "blocks/catalog/product";
+@import "blocks/catalog/more-products";
+@import "blocks/catalog/additional-goods";
+@import "blocks/catalog/add-good";
+@import "blocks/catalog/promotion";
+@import "blocks/form/program-form";
+@import "blocks/form/form-unit";
