--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -3,42 +3,47 @@
 }
 
 .theme__title {
-  margin: 20px 0;
-  font-family: $regular;
+  margin: 0;
+  padding: 20px 0;
   font-size: 36px;
-  line-height: 1;
   font-weight: normal;
 }
 
 .theme__block-title {
-  margin: 10px 0;
-  font-family: $regular;
+  margin: 0;
+  padding: 10px 0;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
 }
 
 .theme__subtitle {
-  margin: 30px 0;
-  font-family: $regular;
+  margin: 0;
+  padding: 30px 0;
   font-size: 24px;
-  line-height: 1;
 }
 
 .theme__text {
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
 
 .theme__btn {
+  display: block;
   width: 100%;
+  margin: 20px 0;
   padding: 10px 20px;
-  @extend .theme__block-title;
+  font-family: $regular;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
   text-align: center;
   text-decoration: none;
   color: #ffffff;
   background-color: $green;
   border: none;
+  box-sizing: border-box;
 
   &--ghost {
     background-color: $gray;
