Достилизовал мобильную версию главной страницы до блока Живой пример

--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -32,10 +32,11 @@
 .theme__btn {
   display: block;
   width: 100%;
-  margin: 20px 0;
+  //margin: 20px 0;
+  margin-bottom: 20px;
   padding: 10px 20px;
   font-family: $regular;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
   text-align: center;
