--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,6 +5,7 @@ $gray: #f2f2f2;
 //Fonts
 $regular: "Oswald Regular", "Arial", sans-serif;
 $medium: "Oswald Medium", "Arial", sans-serif;
+$arial: "Arial", sans-serif;
 
 //Viewports
 $mobile: 320px;
