--- a/source/sass/blocks/_common/page-logo.scss
+++ b/source/sass/blocks/_common/page-logo.scss
@@ -4,11 +4,16 @@
   padding-top: 10px;
   padding-bottom: 10px;
   height: 45px;
+
+  &--footer {
+    padding-top: 29px;
+    padding-bottom: 20px;
+  }
 }
 
 .page-logo__image {
   position: absolute;
-  top: 10px;
+  top: 11px;
   left: 0;
 }
 
