--- a/source/sass/blocks/_common/page-nav.scss
+++ b/source/sass/blocks/_common/page-nav.scss
@@ -26,9 +26,10 @@
 
 .page-nav__link {
   display: block;
-  padding: 22.5px;
+  padding: 20px;
   font-family: $medium;
   font-size: 20px;
+  line-height: 25px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
