--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -2,24 +2,27 @@
   background-color: #ffffff;
 }
 
-.theme__title {
+.theme__title,
+.theme__block-title,
+.theme__subtitle {
   margin: 0;
-  padding: 20px 0;
+}
+
+.theme__title {
+  padding-bottom: 20px;
   font-size: 36px;
   font-weight: normal;
 }
 
 .theme__block-title {
-  margin: 0;
-  padding: 10px 0;
+  padding-bottom: 10px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
 }
 
 .theme__subtitle {
-  margin: 0;
-  padding: 30px 0;
+  padding-bottom: 30px;
   font-size: 24px;
 }
 
