--- a/source/sass/blocks/index/example.scss
+++ b/source/sass/blocks/index/example.scss
@@ -1,8 +1,23 @@
 .example {
-  padding-top: 10px;
+  padding-top: 30px;
   background-color: $gray;
 }
 
 .example__text {
   padding-right: 5px;
+}
+
+.example__achievements {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.example__total-amount {
+  margin-top: 0;
+  margin-bottom: 35px;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  text-transform: uppercase;
 }
