--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -6,9 +6,10 @@
 .program__title {
   display: flex;
   align-items: center;
-  margin: 5px 0;
+  margin: 0;
+  padding: 4px 2px;
   font-size: 24px;
-  line-height: 37.02px;
+  line-height: 50px;
   font-weight: normal;
   text-transform: uppercase;
 }
@@ -16,8 +17,8 @@
 .program__icon {
   position: relative;
   margin-right: 20px;
-  width: 52px;
-  height: 52px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background-color: $green;
 
@@ -31,8 +32,8 @@
 
   &--slim::after {
     width: 50px;
-    height: 48px;
-    top: 24px;
+    height: 50px;
+    top: 22.5px;
     background: url("../img/icon-cat-slim.svg") no-repeat center;
   }
 
@@ -45,14 +46,16 @@
 }
 
 .program__description {
-  margin: 21px 0;
+  margin: 20px 0;
 }
 
 .program__link {
   display: flex;
   align-items: center;
   padding: 20px 0;
-  border-top: 1px solid #d9d9d9;
+  border: 1px solid transparent;
+  border-top-color: #d9d9d9;
+  border-left: 0;
   @include reset-link(#111111);
   text-transform: uppercase;
 
@@ -61,7 +64,7 @@
     margin-left: 12px;
     display: block;
     width: 24px;
-    height: 12px;
+    height: 1em;
     background: url("../img/icon-right-arrow-long.svg") no-repeat right center;
   }
 }
