--- a/source/sass/blocks/index/programs.scss
+++ b/source/sass/blocks/index/programs.scss
@@ -1,7 +1,11 @@
+.programs .theme__btn {
+  margin-bottom: 22px;
+}
+
 .programs__item {
   margin-bottom: 20px;
 
   &:last-child {
-    margin-bottom: 10px;
+    margin-bottom: 9px;
   }
 }
