--- a/source/sass/blocks/index/slider.scss
+++ b/source/sass/blocks/index/slider.scss
@@ -36,7 +36,7 @@ input[type="radio"]:checked + .slider__image {
   line-height: 1.25;
   text-align: center;
   text-transform: uppercase;
-  color: #111111;
+  color: $black;
 }
 
 .slider__scale {
