--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,6 +1,8 @@
 //Colors
+$black: #111111;
+$darkgrey: #444444;
+$grey: #f2f2f2;
 $green: #68b738;
-$gray: #f2f2f2;
 
 //Fonts
 $regular: "Oswald Regular", "Arial", sans-serif;
