--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -1,6 +1,6 @@
 .program {
   padding: 20px 20px 0;
-  background-color: $gray;
+  background-color: $grey;
 }
 
 .program__title {
@@ -56,7 +56,7 @@
   border: 1px solid transparent;
   border-top-color: #d9d9d9;
   border-left: 0;
-  @include reset-link(#111111);
+  @include reset-link($black);
   text-transform: uppercase;
 
   &::after {
