Закончил стилизацию мобильной версии каталога, начал стилизацию формы.

--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -8,3 +8,21 @@
   text-decoration: none;
   color: $color;
 }
+
+@mixin mobile {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-width: 769px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: 1200px) {
+    @content;
+  }
+}
