--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -22,8 +22,30 @@
 }
 
 .theme__subtitle {
-  padding-bottom: 30px;
+  position: relative;
+  margin-bottom: 30px;
   font-size: 24px;
+  line-height: 1;
+  font-weight: normal;
+  background-image: linear-gradient(to bottom, transparent 0,
+    transparent 15px, $green 15px, $green 18px,
+    transparent 18px, transparent 100%);
+
+  span {
+    display: table;
+    padding: 0 20px;
+    background-color: #ffffff;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 6px;
+    height: 3px;
+    background-color: $green;
+    z-index: -1;
+  }
 }
 
 .theme__text {
@@ -35,7 +57,6 @@
 .theme__btn {
   display: block;
   width: 100%;
-  //margin: 20px 0;
   margin-bottom: 20px;
   padding: 10px 20px;
   font-family: $regular;
@@ -50,6 +71,7 @@
   box-sizing: border-box;
 
   &--ghost {
+    color: black;
     background-color: $grey;
   }
 }
