--- a/source/sass/blocks/index/intro.scss
+++ b/source/sass/blocks/index/intro.scss
@@ -1,11 +1,10 @@
 .intro {
+  padding-top: 27px;
   background: #fff url("../img/index-background-mobile@1x.jpg") no-repeat top;
-  //background-size: 100%;
   background-size: contain;
 }
 
 .intro__wrapper {
-  padding-top: 27px;
   padding-bottom: 2px;
   text-align: center;
   color: #ffffff;
@@ -24,6 +23,7 @@
 
 .intro__image {
   margin: 0 auto;
+  margin-bottom: 2px;
   width: 100%;
   max-width: 650px;
   height: auto;
