--- a/source/sass/blocks/catalog/promotion.scss
+++ b/source/sass/blocks/catalog/promotion.scss
@@ -5,13 +5,14 @@
   padding-bottom: 45px;
   background: url("../img/gift-photo-mobile@1x.jpg") no-repeat center;
 
-}
-
-.promotion__icon {
-  margin: 0 auto 65px;
-  width: 55px;
-  height: 60px;
-  background: url("../img/icon-gift.svg") no-repeat center;
+  &::before {
+    content: "";
+    margin: 0 auto 65px;
+    display: block;
+    width: 55px;
+    height: 60px;
+    background: url("../img/icon-gift.svg") no-repeat center;
+  }
 }
 
 .promotion__text {
