--- a/source/sass/blocks/form/program-form.scss
+++ b/source/sass/blocks/form/program-form.scss
@@ -3,9 +3,18 @@
 }
 
 .program-form__text {
-  margin: 20px 0 38px;
-  padding-right: 15px;
+  margin: 15px 0;
   font-size: 14px;
   line-height: 1.3;
   text-transform: uppercase;
+}
+
+.program-form__footer {
+  padding-top: 23px;
+  padding-bottom: 11px;
+}
+
+.program-form__footnote {
+  margin: 20px 0;
+  text-align: center;
 }
