--- a/source/sass/blocks/index/intro.scss
+++ b/source/sass/blocks/index/intro.scss
@@ -1,17 +1,18 @@
 .intro {
   padding-top: 27px;
-  background: #fff url("../img/index-background-mobile@1x.jpg") no-repeat top;
+  background: #ffffff url("../img/index-background-mobile@1x.jpg") no-repeat top;
   background-size: contain;
 }
 
 .intro__wrapper {
-  padding-bottom: 2px;
+  padding-bottom: 22px;
   text-align: center;
   color: #ffffff;
 }
 
 .intro__title {
   padding-bottom: 25px;
+  line-height: 1;
 }
 
 .intro__text {
@@ -27,4 +28,8 @@
   width: 100%;
   max-width: 650px;
   height: auto;
+}
+
+.intro__btn {
+  font-size: 14px;
 }
