--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -1,7 +1,13 @@
-.program {
+.program__item {
+  margin-bottom: 20px;
   padding: 20px 20px 0;
   background-color: $grey;
+
+  &:last-child {
+    margin-bottom: 9px;
+  }
 }
+
 
 .program__title {
   display: flex;
@@ -53,11 +59,12 @@
   display: flex;
   align-items: center;
   padding: 20px 0;
+
+  @include reset-link($black);
+  text-transform: uppercase;
   border: 1px solid transparent;
   border-top-color: #d9d9d9;
   border-left: 0;
-  @include reset-link($black);
-  text-transform: uppercase;
 
   &::after {
     content: "";
