Стилизовал под планшет шапку, интро и программы на главной

--- a/source/sass/blocks/_common/page-header.scss
+++ b/source/sass/blocks/_common/page-header.scss
@@ -1,4 +1,12 @@
 .page-header {
   position: relative;
   background-color: #ffffff;
+
+  @include tablet {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
