--- a/source/sass/blocks/catalog/catalog.scss
+++ b/source/sass/blocks/catalog/catalog.scss
@@ -1,9 +1,9 @@
 .catalog {
-  padding-top: 25px;
+  //padding-top: 7px;
 }
 
 .catalog__header {
-  padding-bottom: 18px;
+  padding-bottom: 20px;
 }
 
 .catalog__item {
