--- a/source/sass/blocks/index/achievement.scss
+++ b/source/sass/blocks/index/achievement.scss
@@ -35,7 +35,7 @@
   text-align: center;
   color: $black;
   text-transform: uppercase;
-  border: 1px solid #cdcdcd;
+  border: 1px solid $border-grey;
   border-radius: 3px;
   box-sizing: border-box;
 }
