--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -9,12 +9,17 @@
 }
 
 .theme__title {
-  padding-bottom: 20px;
+  padding: 20px 0;
   font-size: 36px;
   font-weight: normal;
 
   &--top {
-    line-height: 40px;
+    padding-top: 27px;
+  }
+
+  @include tablet {
+    padding: 35px 0;
+    font-size: 60px;
   }
 }
 
