--- a/source/sass/blocks/form/form-unit.scss
+++ b/source/sass/blocks/form/form-unit.scss
@@ -4,7 +4,8 @@
   }
 
   &--bordered {
-    padding: 9px 0;
+    margin: 0 -20px;
+    padding: 9px 20px;
     outline: 1px solid #ededed;
   }
 }
@@ -41,7 +42,7 @@
   flex-grow: 1;
   padding: 13px;
   color: $darkgrey;
-  border: 1px solid #cdcdcd;
+  border: 1px solid $border-grey;
 
   &--textarea {
     height: 150px;
@@ -71,11 +72,6 @@
   @include reset-list;
 }
 
-.form-unit__row,
-.form-unit__list {
-  padding: 0 20px;
-}
-
 .form-unit__list-item {
   margin: 12px 0;
 }
@@ -92,7 +88,7 @@
     margin-right: 15px;
     width: 28px;
     height: 28px;
-    border: 1px solid #cdcdcd;
+    border: 1px solid $border-grey;
     background-color: #ffffff;
   }
 }
