--- a/source/sass/blocks/form/program-form.scss
+++ b/source/sass/blocks/form/program-form.scss
@@ -1,9 +1,9 @@
 .program-form {
-  padding-top: 25px;
+  //padding-top: 25px;
 }
 
 .program-form__text {
-  margin: 15px 0;
+  margin: 16px 0;
   font-size: 14px;
   line-height: 1.3;
   text-transform: uppercase;
