--- a/source/sass/blocks/index/slider.scss
+++ b/source/sass/blocks/index/slider.scss
@@ -47,7 +47,7 @@ input[type="radio"]:checked + .slider__image {
   height: 14px;
   border-radius: 6px;
   background-color: #ffffff;
-  border: 1px solid #cdcdcd;
+  border: 1px solid $border-grey;
   box-sizing: border-box;
 
   &::after {
