--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -9,20 +9,14 @@
   color: $color;
 }
 
-@mixin mobile {
-  @media (max-width: 768px) {
-    @content;
-  }
-}
-
 @mixin tablet {
-  @media (min-width: 769px) {
+  @media (min-width: $tablet-width) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media (min-width: 1200px) {
+  @media (min-width: $desktop-width) {
     @content;
   }
 }
