--- a/source/sass/blocks/_common/page-footer.scss
+++ b/source/sass/blocks/_common/page-footer.scss
@@ -2,6 +2,19 @@
   background-color: $grey;
 }
 
+.page-footer__bottom {
+  @include tablet {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+  }
+}
+
 .page-footer__item {
   padding: 21px 0;
+
+  @include tablet {
+    padding: 0;
+  }
 }
