--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -50,6 +50,11 @@
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
+
+  @include tablet {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
 
 .theme__btn {
