--- a/source/sass/blocks/index/example.scss
+++ b/source/sass/blocks/index/example.scss
@@ -1,10 +1,29 @@
 .example {
   padding-top: 10px;
   background-color: $grey;
+
+  @include tablet {
+    background-color: #ffffff;
+    padding-bottom: 25px;
+  }
 }
 
 .example__text {
   padding-right: 5px;
+
+  @include tablet {
+    padding-right: 20px;
+    margin-top: 30px;
+    margin-bottom: 40px;
+  }
+}
+
+.example__row {
+  @include tablet {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+  }
 }
 
 .example__achievements {
@@ -13,11 +32,25 @@
   padding: 10px 0;
 }
 
-.example__total-amount {
+.example__total {
   margin-top: 0;
   margin-bottom: 35px;
   font-size: 14px;
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
+
+  @include tablet {
+    margin-top: 15px;
+    margin-bottom: 0;
+    font-size: 20px;
+    line-height: 1.5;
+    text-align: right;
+  }
+}
+
+.example__total-amount {
+  @include tablet {
+    display: block;
+  }
 }
