--- a/source/sass/blocks/_common/page-footer.scss
+++ b/source/sass/blocks/_common/page-footer.scss
@@ -7,7 +7,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 49px;
+    padding-bottom: 47px;
   }
 }
 
