--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -44,6 +44,17 @@
     padding: 0 20px;
     background-color: #ffffff;
   }
+
+  @include tablet {
+    width: $tablet-width;
+    padding: 0 calc((100vw - #{$tablet-width} + 36px) / 2);
+    font-size: 36px;
+    background-image: linear-gradient(to bottom, transparent 0, transparent 22px, $green 22px, $green 25px, transparent 25px, transparent 100%);
+
+    span {
+      padding: 0 36px;
+    }
+  }
 }
 
 .theme__text {
