--- a/source/sass/blocks/catalog/additional-goods.scss
+++ b/source/sass/blocks/catalog/additional-goods.scss
@@ -1,10 +1,15 @@
 .additional-goods {
-  padding-bottom: 20px;
+  padding: 0 0 20px;
 }
 
 .additional-goods__title {
   margin-top: 29px;
   margin-bottom: 28px;
+
+  @include tablet {
+    margin-top: 37px;
+    margin-bottom: 75px;
+  }
 }
 
 .additional-goods__list {
