--- a/source/sass/global/base.scss
+++ b/source/sass/global/base.scss
@@ -12,22 +12,18 @@ img {
 
 .container {
   margin: 0 auto;
+  padding: 0 $mobile-pads;
   min-width: $mobile-width;
   width: $mobile-width;
-  padding: 0 20px;
   box-sizing: border-box;
 
-  &--no-pad {
-    padding: 0;
-  }
-
   @include tablet {
-    padding: 0 30px;
+    padding: 0 $tablet-pads;
     width: $tablet-width;
   }
 
   @include desktop {
-    padding: 0 40px;
+    padding: 0 $desktop-pads;
     width: $desktop-width;
     max-width: $desktop-width;
   }
