--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -12,5 +12,8 @@ $arial: "Arial", sans-serif;
 
 //Viewports
 $mobile-width: 320px;
+$mobile-pads: 20px;
 $tablet-width: 768px;
+$tablet-pads: 30px;
 $desktop-width: 1300px;
+$desktop-pads: 40px;
