--- a/source/sass/blocks/_common/theme.scss
+++ b/source/sass/blocks/_common/theme.scss
@@ -24,10 +24,15 @@
 }
 
 .theme__block-title {
-  padding-bottom: 10px;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 300;
   text-transform: uppercase;
+  color: #222222;
+
+  @include tablet {
+    font-size: 20px;
+  }
 }
 
 .theme__subtitle {
@@ -49,6 +54,10 @@
     padding: 0 calc((100vw - 708px) / 2);
     font-size: 36px;
     background-image: linear-gradient(to bottom, transparent 0, transparent 22px, $green 22px, $green 25px, transparent 25px, transparent 100%);
+
+    br {
+      display: none;
+    }
 
     span {
       padding: 0 36px;
