--- a/source/sass/blocks/form/form-unit.scss
+++ b/source/sass/blocks/form/form-unit.scss
@@ -1,17 +1,45 @@
 .form-unit {
   &--no-title {
     padding: 10px 0;
+
+    @include tablet {
+      padding: 30px 0;
+    }
   }
 
   &--bordered {
     margin: 0 -20px;
     padding: 9px 20px;
     outline: 1px solid #ededed;
+
+    @include tablet {
+      margin-top: 25px;
+      margin-bottom: 77px;
+      margin-left: 40px;
+      margin-right: -30px;
+      padding: 12px 30px;
+    }
+  }
+}
+
+.form-unit__title {
+  @include tablet {
+    margin: 62px 0 75px;
+
+    &--last {
+      margin-bottom: 40px;
+    }
   }
 }
 
 .form-unit__row {
   margin: 14px 0;
+
+  @include tablet {
+    margin: 16px 0;
+    padding: 0 40px;
+    padding-bottom: 4px;
+  }
 }
 
 .form-unit__item {
@@ -24,9 +52,12 @@
 .form-unit__input,
 .form-unit__input::placeholder {
   font-family: $regular;
-  font-size: 16px;
   line-height: 1.12;
   text-transform: uppercase;
+
+  @include tablet {
+    line-height: 1;
+  }
 }
 
 .form-unit__label {
@@ -44,10 +75,19 @@
   color: $darkgrey;
   border: 1px solid $border-grey;
 
+  @include tablet {
+    padding: 10px 20px;
+  }
+
   &--textarea {
     height: 150px;
     box-sizing: border-box;
     resize: none;
+
+    @include tablet {
+      height: 175px;
+      padding: 17px 20px;
+    }
   }
 
   &--icon {
@@ -70,10 +110,26 @@
 
 .form-unit__list {
   @include reset-list;
+
+  &--checks {
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      padding-left: 40px;
+    }
+  }
 }
 
 .form-unit__list-item {
   margin: 12px 0;
+}
+
+@include tablet {
+  .form-unit__list--checks .form-unit__list-item {
+    width: 325px;
+    margin: 16px 0;
+  }
 }
 
 .form-unit__label--radio,
@@ -86,10 +142,17 @@
     content: "";
     flex-shrink: 0;
     margin-right: 15px;
-    width: 28px;
-    height: 28px;
+    width: 30px;
+    height: 30px;
     border: 1px solid $border-grey;
     background-color: #ffffff;
+    box-sizing: border-box;
+
+    @include tablet {
+      margin-right: 20px;
+      width: 40px;
+      height: 40px;
+    }
   }
 }
 
@@ -99,6 +162,10 @@
 
 .form-unit__radio:checked + .form-unit__label--radio::before {
   background-image: radial-gradient($green 0, $green 6px, #ffffff 7px, #ffffff 100%);
+
+  @include tablet {
+    background-image: radial-gradient($green 0, $green 9px, #ffffff 10px, #ffffff 100%);
+  }
 }
 
 .form-unit__checkbox:checked + .form-unit__label--checkbox::before {
