--- a/source/sass/blocks/form/program-form.scss
+++ b/source/sass/blocks/form/program-form.scss
@@ -7,14 +7,42 @@
   font-size: 14px;
   line-height: 1.3;
   text-transform: uppercase;
+
+  @include tablet {
+    margin: 20px 0;
+    font-size: 20px;
+    padding-left: 40px;
+    line-height: 1.5;
+  }
 }
 
 .program-form__footer {
   padding-top: 23px;
   padding-bottom: 11px;
+
+  @include tablet {
+    display: flex;
+    align-items: center;
+    padding-top: 35px;
+    padding-bottom: 72px;
+  }
+}
+
+.program-form__submit-btn {
+  @include tablet {
+    margin-left: 40px;
+    margin-right: 60px;
+    width: 285px;
+    padding: 16px;
+    font-size: 20px;
+  }
 }
 
 .program-form__footnote {
   margin: 20px 0;
   text-align: center;
+
+  @include tablet {
+    margin: 0;
+  }
 }
