--- a/source/sass/blocks/_common/page-footer.scss
+++ b/source/sass/blocks/_common/page-footer.scss
@@ -1,4 +1,5 @@
 .page-footer {
+  position: relative;
   background-color: $grey;
 }
 
@@ -9,6 +10,10 @@
     align-items: center;
     padding-top: 49px;
     padding-bottom: 47px;
+  }
+
+  @include desktop {
+    padding-left: 30px;
   }
 }
 
