--- a/source/sass/blocks/index/feature.scss
+++ b/source/sass/blocks/index/feature.scss
@@ -5,6 +5,11 @@
     padding-bottom: 3px;
     border-bottom: 1px solid $border-grey;
   }
+
+  @include desktop {
+    padding-bottom: 0;
+    border-bottom: none;
+  }
 }
 
 .feature__list {
@@ -43,6 +48,15 @@
       font-size: 280px;
       color: #f2f2f2;
       z-index: -1;
+    }
+  }
+
+  @include desktop {
+    margin: 35px 0 0;
+    width: 245px;
+
+    &::after {
+      right: 10px;
     }
   }
 
