--- a/source/sass/blocks/index/intro.scss
+++ b/source/sass/blocks/index/intro.scss
@@ -7,6 +7,11 @@
   @include tablet {
     background: #ffffff;
   }
+
+  @include desktop {
+    min-height: 560px;
+    background: transparent;
+  }
 }
 
 .intro__wrapper {
@@ -29,7 +34,9 @@
 }
 
 .intro__title {
-  //sdcsc
+  @include desktop {
+    margin-top: 34px;
+  }
 }
 
 .intro__text {
@@ -42,6 +49,10 @@
     font-size: 20px;
     line-height: 22px;
     padding-bottom: 15px;
+  }
+
+  @include desktop {
+    padding-bottom: 25px;
   }
 }
 
@@ -58,6 +69,16 @@
     margin-left: -10px;
     margin-bottom: 0;
     z-index: -1;
+  }
+
+  @include desktop {
+    position: absolute;
+    top: 0;
+    left: 530px;
+    margin-top: 0;
+    margin-bottom: 55px;
+    width: 525px;
+    height: 500px;
   }
 }
 
